[project]
name = "chimera_v2"
version = "0.1"

dependencies = [
    # Protobuf dependencies.
    "protobuf", "grpcio-tools", "protoletariat", 

    # We use libusb-package to get a version of pyusb's usb.core with libusb packaged in.
    "libusb-package", 

    # CAN support dependencies.
    "cantools", "python-can"
]

[tool.setuptools]
py-modules=["chimera_v2"]
packages=["proto_autogen"]
