[project]
name = "chimera_v2"
version = "0.5"

dependencies = [
    # Protobuf dependencies.
    "protobuf", "grpcio-tools", "protoletariat", 

    # We use libusb-package to get a version of pyusb's usb.core with libusb packaged in.
    "libusb-package", "pyusb",

    # Visa peripherals.
    "pyvisa",

    # Data.
    "pandas", "numpy",
]

[tool.setuptools]
py-modules=["chimera_v2", "load_bank", "power_supply", "scope"]
packages=["proto_autogen_hex"]
