set(QUADRUNA_DIR "${FIRMWARE_DIR}/quadruna")
set(SHARED_QUADRUNA_DIR "${QUADRUNA_DIR}/shared")
set(SHARED_EMBEDDED_QUADRUNA_DIR "${SHARED_QUADRUNA_DIR}/src")

set(SHARED_APP_INCLUDE_QUADRUNA_DIR "${SHARED_EMBEDDED_QUADRUNA_DIR}/app")
set(SHARED_IO_INCLUDE_QUADRUNA_DIR "${SHARED_EMBEDDED_QUADRUNA_DIR}/io")
set(SHARED_HW_INCLUDE_QUADRUNA_DIR "${SHARED_EMBEDDED_QUADRUNA_DIR}/hw")

add_subdirectory(VC)
add_subdirectory(BMS)
add_subdirectory(FSM)
add_subdirectory(RSM)
add_subdirectory(CRIT)
add_subdirectory(DIM)
